feature : recommend qt in module-qt